feat: add NIM to SSO M2M request, add RabbitMQ logging
