# routes/api.php
@@ -11,16 +11,10 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::middleware('check.api.key')->prefix('v1')->group(function () {
-
-    // Collection: GET semua transaksi
     Route::get('/transactions', [TransactionController::class, 'index']);
-
-    // Resource: GET transaksi by account
     Route::get('/transactions/account/{account_id}', [TransactionController::class, 'getByAccount']);
-
-    // Resource: GET riwayat cicilan by account
     Route::get('/transactions/repayment/{account_id}', [TransactionController::class, 'getRepaymentHistory']);
-
-    // Action: POST eksekusi pembayaran cicilan
     Route::post('/transactions/repayment', [TransactionController::class, 'processRepayment']);
 });
+
+Route::post('/auth/login', [TransactionController::class, 'login']);
